# tk07-url-shortener

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml  postCreate.sh
.github/workflows/: ci.yml
docs/arch/: adr000-dev-container.md  adr001-uv-for-dependency-management.md  adr002-pytest-for-automated-tests.md  adr003-pyright-for-type-checking.md  adr004-ruff-for-linting-formatting.md  adr005-use-github-actions-for-ci.md  adr006-url-shortener-pivot.md  adr007-tag-integration-tests.md  adr008-use-sqlmodel-for-database-persistence.md
scripts/: run-dev-server.sh  run-qa.sh
src/: __init__.py  config.py  db.py  main.py
src/entities/: link.py
src/models/: __init__.py  link.py
src/routes/: __init__.py  router.py
src/services/: __init__.py  link_service.py  link_service_di.py
src/store/: __init__.py  json_file_io.py  link_store.py  link_store_factory.py
src/util/: reset_db.py
test/: conftest.py  test_config_unit.py  test_yield_fixtures.py
test/examples/: test_integration_example.py  test_unit_example.py
test/routes/: test_router_e2e.py  test_router_integration.py  test_router_unit.py
test/services/: test_link_service_unit.py
test/store/: test_json_file_io_integration.py  test_json_file_io_unit.py  test_link_store_factory_unit.py  test_link_store_integration.py  test_link_store_unit.py
test/util/: test_reset_db_unit.py
